# jnaDemo

./: .gitignore  build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/me/newtrekwang/enul/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: sqliteUtil.cpp
app/src/main/cpp/include/: sqliteUtil.h
app/src/main/java/com/ecarx/enlu/: MainActivity.java  MyApplication.java
app/src/main/java/com/ecarx/enlu/utils/: Clibrary.java
app/src/main/res/values/: strings.xml
app/src/test/java/me/newtrekwang/enul/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
